--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^2.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -16,7 +17,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
-    "vue": "^3.0.0",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
