--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.13"
+    "vue-carousel": "^0.18.0",
+    "vue-router": "^4.0.13",
+    "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.14",
